fix: refill the deck when it's empty